--- a/public/styles/index-scroll.css
+++ b/public/styles/index-scroll.css
@@ -328,6 +328,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  z-index: 1;
 }
 
 .artist-slide {
@@ -533,6 +534,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  z-index: 1;
 }
 
 .release-slide {
